enforce max-height on input and remove overflow from editable which bugs like shit

--- a/stylus/framework/footer.styl
+++ b/stylus/framework/footer.styl
@@ -55,13 +55,14 @@
 
 	grape-input
 		flex: 1
+		max-height: 150px
+		overflow-y: auto
 		[contenteditable="true"]
 			@extend $roboto
 			@extend $big-font-size
 			position: relative
 			padding: 9px 92px 7px 15px
 			max-height: 150px
-			overflow-y: auto
 			&::before
 				position: absolute
 				pointer-events: none // prevent cursor change
